--- a/styles/style.css
+++ b/styles/style.css
@@ -1,85 +1,87 @@
-/* * {margin:0; padding:0} */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-p {
-  color: rgb(0, 0, 0);
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
+  text-align: center;
 }
 
 header {
-  background: rgba(0, 0, 0, 0.7);
-  width: 100%;
+  background: #222;
+  color: white;
+  padding: 10px 0;
   position: fixed;
-  z-index: 100;
-}
-
-nav {
-  float: left;
+  width: 100%;
+  top: 0;
+  left: 0;
+  box-shadow: 0px 4px 2px -2px gray;
 }
 
 nav ul {
   list-style: none;
-  overflow: hidden; 
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 nav ul li {
-  float: left;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
+  display: inline;
 }
+
 nav ul li a {
-  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
   padding: 10px;
-  color: rgb(3, 22, 128);
-  text-decoration: dotted;
+  transition: 0.3s;
 }
-nav ul li:hover {
-  background: #eca023;
+
+nav ul li a:hover {
+  color: #f4a261;
+}
+
+main {
+  padding: 100px 20px 40px;
+}
+
+.intro h1 {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
+
+.intro p {
+  font-size: 1.2em;
+  color: #666;
+}
+
+.sobre-mi, .cv {
+  background: white;
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #222;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background: #f4a261;
+}
+
+footer {
+  margin-top: 20px;
+  padding: 10px;
+  background: #222;
+  color: white;
 }
